--- a/ygt.html
+++ b/ygt.html
@@ -13,6 +13,9 @@
             <a href="index.html">Home</a>
             <a class="active" href="ygt.html">YGT Unreleased</a>
         </div>
-        
+        <h1>Music drops in 24 hours!!!!!!</h1>
+        <a href="https://on.soundcloud.com/PxmR7">YGT ON Soundcloud (click here)</a>
+        <br>
+        <a href="https://www.youtube.com/@yungghosttngygt">YGT ON Youtube (click here)</a>
     </body>
 </html>
