--- a/Shop.html
+++ b/Shop.html
@@ -3,19 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Homepage YGT</title>
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Stylesheet.css">
     </head>
     <body class="g-base">
         <div class="topnav">
-            <a class="active" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="ygt.html">YGT Unreleased</a>
-            <a href="Shop.html">Shop</a>
+            <a class="active" href="Shop.html">Shop</a>
         </div>
-        <h1>Young Ghost </h1>
-        <h1>The Next Generation</h1>
-        <p>Your place to find everything Young Ghost TNG</p>
+        <h1>Shop Comeing Soon!</h1>
+    <h1>Check Back For Updates!</h1>
     </body>
 </html>
