--- a/ygt.html
+++ b/ygt.html
@@ -12,6 +12,7 @@
         <div class="topnav">
             <a href="index.html">Home</a>
             <a class="active" href="ygt.html">YGT Unreleased</a>
+            <a href="Shop.html">Shop</a>
         </div>
         <h1>Music drops in 24 hours!!!!!!</h1>
         <a href="https://on.soundcloud.com/PxmR7">YGT ON Soundcloud (click here)</a>
